--- a/utahtech3/style.css
+++ b/utahtech3/style.css
@@ -3,7 +3,7 @@ body {
     color: #666666;
     font-family: 'Arial', sans-serif;
     background-attachment: fixed;
-    background: linear-gradient(#eeeeee, #ffffff);
+    background: linear-gradient(to bottom, #eeeeee, #ffffff);
 }
 
 nav a {
@@ -16,11 +16,6 @@ nav a {
     padding-bottom: 0.5rem;
 }
 
-main {
-    padding-left: 2rem;
-    padding-right: 2rem;
-}
-
 header {
     background-color: #003058;
     color: #FFFFFF;
@@ -29,18 +24,26 @@ header {
 
 header h1 {
     background-position: right;
-    line-height: 140%;
+    background-repeat: no-repeat;
+    background-image:
+        url("utahtechlogo.svg");
     padding-left: 1rem;
     background-origin: content-box;
-    margin-bottom: 0;
+    margin-bottom:0;
 }
 
-h2 {
+main {
+    padding-left: 2rem;
+    padding-right: 2rem;
+    
+}
+
+main h2 {
     color: #424242;
     font-family: 'Georgia', sans-serif;
 }
 
-h3 {
+main h3 {
     color: #003058;
 }
 
@@ -68,7 +71,7 @@ footer {
     width: 80%;
     margin-right: auto;
     margin-left: auto;
-    box-shadow: 0px 3px rgba(66, 66, 66, 0.3);
+    box-shadow: 0px 3px 3px rgba(66, 66, 66, 0.3);
 }
 
 #homehero {
@@ -77,6 +80,7 @@ footer {
     height: 300px;
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
 }
 
 #studenthero {
@@ -85,6 +89,7 @@ footer {
     height: 300px;
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
 }
 
 #facultyhero {
@@ -93,4 +98,5 @@ footer {
     height: 300px;
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
 }
