--- a/utahtech3/style.css
+++ b/utahtech3/style.css
@@ -94,7 +94,7 @@ footer {
 
 #facultyhero {
     background-image:
-        url("https://zyobot101.github.io/se1400/utahtech3/facultyhero.jpg");
+        url("file:///Users/ethanlee/Desktop/Summer%202025%20-%20Computing%20Fundamentals/se1400/utahtech3/facultyhero.jpg");
     height: 300px;
     background-size: cover;
     background-position: center;
