--- a/utahtech3/style.css
+++ b/utahtech3/style.css
@@ -16,6 +16,7 @@ header {
     background-color: #003058;
     color: #FFFFFF;
     font-family: 'Georgia', sans-serif;
+    padding: 1em;
 }
 
 header h1 {
