--- a/utahtech3/style.css
+++ b/utahtech3/style.css
@@ -10,6 +10,11 @@ nav a {
     text-decoration: none;
     background-color: #F3F3F3;
     font-weight: bold;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-right: 0.5rem;
+    padding-left: 2rem;
+
 }
 
 header {
