--- a/utahtech3/style.css
+++ b/utahtech3/style.css
@@ -6,7 +6,7 @@ body {
     background: linear-gradient(to bottom, #eeeeee, #ffffff);
 }
 
-nav a {
+nav {
     text-decoration: none;
     background-color: #F3F3F3;
     font-weight: bold;
@@ -14,7 +14,6 @@ nav a {
     padding-bottom: 0.5rem;
     padding-right: 0.5rem;
     padding-left: 2rem;
-
 }
 
 header {
