--- a/milestone3/style.css
+++ b/milestone3/style.css
@@ -4,7 +4,7 @@
 
 body {
     background-attachment:fixed;
-    background-color: #848484;
+    background-color: rgba(255,255,255,0.3);
     margin: auto;
 }
 
@@ -38,7 +38,7 @@ nav ul li {
 
 h1 {
     background-color: #090128;
-    color: #FE20D5;
+    color: rgba(254, 32, 213, 1);
     font-family: 'Lexend Exa', sans-serif;
     grid-row: 1/2;
     grid-column: 2/4;
@@ -53,12 +53,12 @@ main {
     grid-column: 2/4;
     height: 578px;
     width: 990px;
-    background-color: #F4FFB3;
+    background-color: rgba(244, 255, 179, 1);
     text-decoration: none;
 }
 
 footer {
-    background-color: #B3FFE4;
+    background-color: rgba(179, 255, 228, 1);
     grid-row: 5/6;
     grid-column: 2/4;
     text-align: center;
@@ -73,7 +73,7 @@ footer {
 }
 
 #coding_journey {
-    background-color: #FFB3B3;
+    background-color: rgba(255, 179, 179, 1);
     grid-row: 2/3;
     grid-column: 2/3;
     text-align: left;
@@ -82,7 +82,7 @@ footer {
 }
 
 #homecode {
-    background-color: #FFD3B3;
+    background-color: rgba(255, 211, 179, 1);
     grid-row: 2/3;
     grid-column: 4/5;
     height: 366px;
@@ -90,7 +90,7 @@ footer {
 }
 
 #middle_bar {
-    background-color: #B3E6FF;
+    background-color: rgba(179, 230, 255, 1);
     grid-row: 3/4;
     grid-column: 2/5;
     height: 128px;
