--- a/milestone3/style.css
+++ b/milestone3/style.css
@@ -4,12 +4,12 @@
 
 body {
     background-attachment:fixed;
-    background-color: rgba(255,255,255,0.3);
+    background-color: rgba(95,97,96,1);
     margin: auto;
 }
 
 nav {
-    background-color: #B8B3FF;
+    background-color: rgba(184,179,255,1);
     grid-area: 1/2/2/4;
     top:0;
     height: 75px;
@@ -37,8 +37,8 @@ nav ul li {
 }
 
 h1 {
-    background-color: #090128;
-    color: rgba(254, 32, 213, 1);
+    background-color: rgba(9,1,40,1);
+    color: rgba(254,32,213,1);
     font-family: 'Lexend Exa', sans-serif;
     grid-row: 1/2;
     grid-column: 2/4;
@@ -53,12 +53,12 @@ main {
     grid-column: 2/4;
     height: 578px;
     width: 990px;
-    background-color: rgba(244, 255, 179, 1);
+    background-color: rgba(244,255,179,1);
     text-decoration: none;
 }
 
 footer {
-    background-color: rgba(179, 255, 228, 1);
+    background-color: rgba(179,255,228,1);
     grid-row: 5/6;
     grid-column: 2/4;
     text-align: center;
@@ -69,11 +69,11 @@ footer {
 
 #wrapper {
     display: grid;
-    grid-template-columns: minmax(0px, 1fr) repeat(6, minmax(0, 175px)) minmax(0px, 1fr);
+    grid-template-columns: minmax(0px,1fr) repeat(6, minmax(0,175px)) minmax(0px,1fr);
 }
 
 #coding_journey {
-    background-color: rgba(255, 179, 179, 1);
+    background-color: rgba(255,179,179,1);
     grid-row: 2/3;
     grid-column: 2/3;
     text-align: left;
@@ -82,7 +82,7 @@ footer {
 }
 
 #homecode {
-    background-color: rgba(255, 211, 179, 1);
+    background-color: rgba(255,211,179,1);
     grid-row: 2/3;
     grid-column: 4/5;
     height: 366px;
@@ -90,7 +90,7 @@ footer {
 }
 
 #middle_bar {
-    background-color: rgba(179, 230, 255, 1);
+    background-color: rgba(179,230,255,1);
     grid-row: 3/4;
     grid-column: 2/5;
     height: 128px;
