--- a/milestone4/style.css
+++ b/milestone4/style.css
@@ -4,7 +4,7 @@
 
 body {
     background-color: rgba(95,97,96,1);
-    margin: auto;
+    margin: 0;
 }
 
 nav {
@@ -13,24 +13,29 @@ nav {
     top:0;
     height: 75px;
     width: 990px;
-    padding: 25px 50px 25px;
 }
 
 nav a {
-    text-decoration: none;
-    display: block;
-    text-align: center;
+    text-decoration:none;
+    display:block;
+}
+
+nav h2 {
+    font-size: 24px;
+    font-family: 'Lexend Exa', sans-serif;
+    color: rgba(254, 32, 213, 1);
+    margin: 25px 25px 0px 50px;
+    text-decoration:none;
 }
 
 nav ul {
-    margin: 25 px 0px 25px;
-    display:flex;
+    margin: 25px 25px 25px 25px;
+    display:inline;
     list-style-type:none;
     font-family: 'Anonymous Pro', sans-serif;
-}
-
-nav ul li {
+    font-size: 24px;
     width:15%;
+    padding: 25px 25px 25px 25px;
 }
 
 main {
@@ -45,12 +50,15 @@ main {
     font-family: 'Anonymous Pro', sans-serif;
 }
 
-main h2 {
+main h3 {
     color: rgba(215,255,174,1);
     font-family: 'Roboto', sans-serif;
+    font-size: 32px;
+    font-weight: normal;
 }
 
 main img {
+    float:right;
     
 }
 
@@ -70,24 +78,17 @@ footer {
     grid-template-columns: minmax(0px,1fr) repeat(6, minmax(0,175px)) minmax(0px,1fr);
 }
 
-#topbar {
-    background-color: rgba(9,1,40,1);
-    grid-area: 1/2/2/4;
-    top:0;
-    height: 75px;
-    width: 990px;
-}
-
 #coding_journey {
     background-color: rgba(19,19,19,1);
     grid-row: 2/3;
     grid-column: 2/3;
     font-family: 'Roboto Mono', sans-serif;
-    font-size: 32;
+    font-size: 32px;
     color: rgba(130,242,255,1);
-    text-align: left;
     height: 366px;
     width: 350px;
+    padding: 20px 40px 0px 80px;
+    line-height: 100%;
 }
 
 #homecode {
@@ -99,7 +100,6 @@ footer {
     grid-column: 4/5;
     height: 366px;
     width: 640px;
-    line-height: 150%;
 }
 
 #middle_bar {
