--- a/milestone4/style.css
+++ b/milestone4/style.css
@@ -4,7 +4,7 @@
 
 body {
     background-color: rgba(95,97,96,1);
-    margin: 0;
+    margin: auto;
 }
 
 nav {
@@ -59,11 +59,13 @@ main h3 {
 
 main img {
     float:right;
-    
+    padding-left:40px;
+    padding-top: 20px;
 }
 
 footer {
     background-color: rgba(51, 64, 76, 1);
+    color: rgba(255, 255, 255, 1);
     grid-row: 5/6;
     grid-column: 2/4;
     text-align: center;
@@ -112,5 +114,5 @@ footer {
     font-size: 26px;
     color: rgba(255,163,98,1);
     text-align: center;
-    line-height: 150%;
+    line-height: 100%;
 }
