--- a/milestone4/style.css
+++ b/milestone4/style.css
@@ -9,10 +9,10 @@ body {
 
 nav {
     background-color: rgba(9,1,40,1);
-    grid-area: 1/2/2/4;
     top:0;
-    height: 75px;
-    width: 990px;
+    grid-row: 1;
+    grid-column: 2/8;
+    
 }
 
 nav a {
@@ -36,15 +36,23 @@ nav ul {
     font-size: 24px;
     width:15%;
     padding: 25px 25px 25px 25px;
+    flex-flow: row nowrap;
+}
+
+nav ul li {
+    /* Convert to css.style format somehow:
+        <li><span style="color:#FF1717;"><a href="index.html">Home</a></span></li>
+        <li><span style="color:#FFC917;"><a href="about.html">About</a></span></li>
+        <li><span style="color:#FFFA76;"><a href="contact.html">Contact</a></span></li>
+        <li><span style="color:#6ED22F;"><a href="blog.html">Blog</a></span></li>
+        <li><span style="color:#746BF5;"><a href="projects.html">Project</a></span></li> */
 }
 
 main {
     padding-left:2rem;
     padding-right:2rem;
     grid-row: 4/5;
-    grid-column: 2/4;
-    height: 578px;
-    width: 990px;
+    grid-column: 2/8;
     background-color: rgba(207,207,207,1);
     text-decoration: none;
     font-family: 'Anonymous Pro', sans-serif;
@@ -67,12 +75,11 @@ footer {
     background-color: rgba(51, 64, 76, 1);
     color: rgba(255, 255, 255, 1);
     grid-row: 5/6;
-    grid-column: 2/4;
+    grid-column: 2/8;
     text-align: center;
     font-family: 'Anek Odia', sans-serif;
-    height: 53px;
-    width: 990px;
     padding-top: 20px;
+    text-decoration: none;
 }
 
 #wrapper {
@@ -83,12 +90,10 @@ footer {
 #coding_journey {
     background-color: rgba(19,19,19,1);
     grid-row: 2/3;
-    grid-column: 2/3;
+    grid-column: 2/4;
     font-family: 'Roboto Mono', sans-serif;
     font-size: 32px;
     color: rgba(130,242,255,1);
-    height: 366px;
-    width: 350px;
     padding: 20px 40px 0px 80px;
     line-height: 100%;
 }
@@ -99,20 +104,27 @@ footer {
     background-size: cover;
     background-repeat: no-repeat;
     grid-row: 2/3;
-    grid-column: 4/5;
-    height: 366px;
-    width: 640px;
+    grid-column: 4/8;
 }
 
 #middle_bar {
     background-color: rgba(51,64,76,1);
     grid-row: 3/4;
-    grid-column: 2/5;
-    height: 128px;
-    width: 990px;
+    grid-column: 2/8;
     font-family: 'Anek Odia', sans-serif;
     font-size: 26px;
     color: rgba(255,163,98,1);
     text-align: center;
     line-height: 100%;
+}
+
+.figure {
+    width:200px;
+    grid-column: 6;
+}
+
+.project{
+    float:left;
+    text-align:left;
+    grid-column: 2/4;
 }
