--- a/milestone4/style.css
+++ b/milestone4/style.css
@@ -1,3 +1,10 @@
+/* Import 'Lexend Exa', 'Anonymous Pro', 'Roboto', and 'Anek Odio' font families*/
+
+@font-face {
+    font-family: ;
+    src: url();
+}
+
 * {
     box-sizing: border-box;
 }
@@ -72,50 +79,50 @@ footer {
     color: rgba(255, 255, 255, 1);
     grid-row: 5/6;
     grid-column: 2/8;
-    text-align: center;
+    text-align:center;
     font-family: 'Anek Odia', sans-serif;
-    padding-top: 20px;
-    text-decoration: none;
+    padding-top:20px;
+    text-decoration:none;
 }
 
 #wrapper {
-    display: grid;
+    display:grid;
     grid-template-columns: minmax(0px,1fr) repeat(6, minmax(0,175px)) minmax(0px,1fr);
 }
 
 #homepage {
     background:none;
-    background-color: none;
-    color:#FF1717;
-    text-decoration: none;
+    background-color:none;
+    color:rgba(255, 23, 23, 1);
+    text-decoration:none;
 }
 
 #aboutpage {
     background:none;
-    background-color: none;
-    color:#FFC917;
-    text-decoration: none;
+    background-color:none;
+    color:rgba(255, 201, 23, 1);
+    text-decoration:none;
 }
 
 #contactpage {
     background:none;
-    background-color: none;
-    color:#FFFA76;
-    text-decoration: none;
+    background-color:none;
+    color:rgba(255, 250, 118, 1);
+    text-decoration:none;
 }
 
 #blogpage {
     background:none;
-    background-color: none;
-    color:#6ED22F;
-    text-decoration: none;
+    background-color:none;
+    color:rgba(110, 210, 47, 1);
+    text-decoration:none;
 }
 
 #projectspage {
     background:none;
-    background-color: none;
-    color:#746BF5;
-    text-decoration: none;
+    background-color:none;
+    color:rgba(116, 107, 245, 1);
+    text-decoration:none;
 }
 
 #coding_journey {
