--- a/milestone4/style.css
+++ b/milestone4/style.css
@@ -156,6 +156,15 @@ footer {
     line-height: 100%;
 }
 
+#ellipsis {
+    background:none;
+    background-color:none;
+    color:rgba(255, 255, 255, 1);
+    font-weight:bold;
+    text-decoration:none;
+    font-family: 'Anek Odia', sans-serif;
+}
+
 .figure {
     width:200px;
     grid-column: 4;
