--- a/milestone4/style.css
+++ b/milestone4/style.css
@@ -1,8 +1,28 @@
 /* Import 'Lexend Exa', 'Anonymous Pro', 'Roboto', and 'Anek Odio' font families*/
 
 @font-face {
-    font-family: ;
-    src: url();
+    font-family: 'Lexend Exa';
+    src: url("https://fonts.google.com/specimen/Lexend+Exa");
+}
+
+@font-face {
+    font-family: 'Anonymous Pro';
+    src: url("https://fonts.google.com/specimen/Anonymous+Pro");
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url("https://fonts.google.com/specimen/Roboto");
+}
+
+@font-face {
+    font-family: 'Roboto Mono';
+    src: url("https://fonts.google.com/specimen/Roboto+Mono");
+}
+
+@font-face {
+    font-family: 'Anek Odio';
+    src: url("https://fontsource.org/fonts/anek-odia");
 }
 
 * {
@@ -56,16 +76,20 @@ main {
     padding-right:2rem;
     grid-row: 4/5;
     grid-column: 2/8;
-    background-color: rgba(207,207,207,1);
+    background-color: rgba(159, 159, 159, 1);
     text-decoration: none;
     font-family: 'Anonymous Pro', sans-serif;
 }
 
 main h3 {
-    color: rgba(215,255,174,1);
+    color: rgba(117, 244, 244, 1);
     font-family: 'Roboto', sans-serif;
     font-size: 32px;
     font-weight: normal;
+    grid-column: 2/4;
+    display:flex;
+    float:left;
+    align:left;
 }
 
 main img {
@@ -131,7 +155,7 @@ footer {
     grid-column: 2/4;
     font-family: 'Roboto Mono', sans-serif;
     font-size: 32px;
-    color: rgba(130,242,255,1);
+    color: rgba(255, 130, 130, 1);
     padding: 20px 40px 0px 80px;
     line-height: 100%;
 }
@@ -167,11 +191,19 @@ footer {
 
 .figure {
     width:200px;
-    grid-column: 4;
+    grid-column: 6;
+    padding-left: 100px;
+    padding-bottom: 100px;
+    padding-top: 100px;
+    align:right;
+    float:right;
+    display:flex;
 }
 
 .project{
     float:left;
     align:left;
     grid-column: 2/5;
+    color: rgba(237, 255, 165, 1);
+    display:flex;
 }
