Lexend End font.

--- a/milestone4/style.css
+++ b/milestone4/style.css
@@ -2,7 +2,7 @@
 
 @font-face {
     font-family: 'Lexend Exa';
-    src: url("/Users/ethanlee/Downloads/Lexend_Exa/LexendExa-VariableFont_wght.ttf");
+    src: url("/Users/ethanlee/Desktop/Summer\ 2025\ -\ Computing\ Fundamentals/se1400/milestone4/LexendExa-VariableFont_wght\ copy.woff");
 }
 
 @font-face {
