Media query update.

--- a/milestone5/style.css
+++ b/milestone5/style.css
@@ -238,10 +238,11 @@ footer {
         width:100%;
     }
 
-    nav a {
+    h2, nav {
         grid-template-columns: 1fr;
         grid-template-rows: 1/2;
         text-align: center;
+        flex-flow: column nowrap;
     }
 
     #coding_journey {
