--- a/milestone5/style.css
+++ b/milestone5/style.css
@@ -238,11 +238,16 @@ footer {
         width:100%;
     }
 
-    h2, nav {
-        grid-template-columns: 1fr;
-        grid-template-rows: 1/2;
-        text-align: center;
-        flex-flow: column nowrap;
+    header h2 {
+        grid-column:1fr;
+        grid-row:1/2;
+        text-align:center;
+    }
+
+    nav {
+        grid-column:1fr;
+        grid-row:2/3;
+        text-align:center;
     }
 
     #coding_journey {
