--- a/milestone5/style.css
+++ b/milestone5/style.css
@@ -241,17 +241,17 @@ footer {
         grid-column:
     }
 
-    header h2 {
-        grid-row:1/2;
+   nav a {
+        grid-row:1/3;
         grid-column:auto;
         text-align:center;
     }
 
-    nav ul {
+    /* nav ul {
         grid-row:2/3;
         grid-column:auto;
         text-align:center;
-    }
+    } */
 
     #coding_journey {
         grid-row:3/4;
