--- a/milestone5/style.css
+++ b/milestone5/style.css
@@ -253,6 +253,11 @@ footer {
         text-align:center;
     }
 
+    nav a {
+        text-align:center;
+        padding:none;
+    }
+
     #coding_journey {
         grid-row:3/4;
         grid-column:auto;
