--- a/milestone5/style.css
+++ b/milestone5/style.css
@@ -251,10 +251,10 @@ footer {
         text-align:center;
     }
 
-    nav a {
+    /* nav a {
         text-align:center;
         padding:none;
-    }
+    } */
 
     #coding_journey {
         grid-row:3/4;
