--- a/milestone5/style.css
+++ b/milestone5/style.css
@@ -243,18 +243,15 @@ footer {
 
     nav h2 {
         grid-row:1/2;
+        grid-column:1/9;
         text-align:center;
     }
 
     nav ul {
         grid-row:2/3;
+        grid-column:1/9;
         text-align:center;
     }
-
-    /* nav a {
-        text-align:center;
-        padding:none;
-    } */
 
     #coding_journey {
         grid-row:3/4;
