--- a/milestone5/style.css
+++ b/milestone5/style.css
@@ -247,10 +247,9 @@ footer {
         text-align:center;
     }
 
-    nav ul {
-        grid-row:2/3;
-        grid-column:1/9;
+    nav a {
         text-align:center;
+        flex-flow:column nowrap;
     }
 
     #coding_journey {
