--- a/milestone5/style.css
+++ b/milestone5/style.css
@@ -212,15 +212,23 @@ footer {
 
 
 @media only screen and (max-width: 992px) {
-
 }
 
 
 @media only screen and (max-width: 768px) {
-    
     #wrapper {
         width:100%;
-        grid-column:minmax(0px,0px) 768px minmax(0px,0px);
+        grid-column:minmax(0px,0px) 1fr minmax(0px,0px);
+    }
+
+    nav {
+        grid-row: 1 / 3;
+        grid-column: 1fr;
+        position:static;
+    }
+
+    nav a {
+        text-align;
     }
 
     nav ul {
