--- a/milestone5/style.css
+++ b/milestone5/style.css
@@ -222,8 +222,8 @@ footer {
     }
 
     nav {
-        grid-row: 1 / 3;
-        grid-column: auto;
+        grid-row:1;
+        grid-column:auto;
         position:static;
     }
 
