--- a/milestone5/style.css
+++ b/milestone5/style.css
@@ -227,11 +227,8 @@ footer {
         position:static;
     }
 
-    nav a {
-        text-align;
-    }
-
     nav ul {
         flex-flow:column nowrap;
+        /*text-align:;*/
     }
 }
