--- a/milestone5/style.css
+++ b/milestone5/style.css
@@ -222,13 +222,13 @@ footer {
     }
 
     nav {
-        grid-row:1;
+        grid-row:1/3;
         grid-column:auto;
         position:static;
+        text-align:center;
     }
 
     nav ul {
         flex-flow:column nowrap;
-        /*text-align:;*/
     }
 }
