--- a/milestone5/style.css
+++ b/milestone5/style.css
@@ -218,14 +218,19 @@ footer {
 @media only screen and (max-width: 768px) {
     #wrapper {
         width:100%;
-        grid-column:minmax(0px,0px) auto minmax(0px,0px);
+        grid-column:minmax(0px,0px) 768px minmax(0px,0px);
     }
 
-    nav {
+    nav a {
         grid-row:1/3;
         grid-column:auto;
         position:static;
         text-align:center;
+        width:100%;
+    }
+
+    nav h2 {
+        grid-row:
     }
 
     nav ul {
