--- a/milestone5/style.css
+++ b/milestone5/style.css
@@ -222,6 +222,7 @@ footer {
     }
 
     nav {
+        background-color:rgba(9,1,40,1);
         grid-row:1/3;
         grid-column:auto;
         position:static;
