--- a/milestone5/style.css
+++ b/milestone5/style.css
@@ -228,7 +228,7 @@ footer {
     nav {
         background-color:rgba(9,1,40,1);
         grid-row:1/3;
-        grid-column:auto;
+        grid-column:1/6;
         position:static;
         text-align:center;
         width:100%;
@@ -242,5 +242,26 @@ footer {
         grid-row:2/3;
     }
 
+    /*
 
+    #coding_journey {
+
+    }
+
+    #homecode {
+
+    }
+
+    #middle_bar {
+
+    }
+
+    .project {
+
+    }
+
+    .photo {
+
+    }
+    */
 }
