--- a/milestone5/style.css
+++ b/milestone5/style.css
@@ -212,30 +212,33 @@ footer {
 
 
 @media only screen and (max-width: 992px) {
+    #wrapper {
+        grid-template-columns: minmax(0px, 1fr) repeat(6, minmax(0, 120px)) minmax(0px, 1fr);
+    }
 }
 
 
 @media only screen and (max-width: 768px) {
     #wrapper {
         width:100%;
-        grid-template-columns:minmax(0px,0px) repeat(6, minmax(0, 128px)) minmax(0px,0px);
+        grid-template-columns:minmax(0px,0px) auto minmax(0px,0px);
     }
 
     body {
         margin: none;
-        grid-column:1/6;
+        grid-column:auto;
     }
 
     nav {
         background-color:rgba(9,1,40,1);
-        grid-row:1/3;
-        grid-column:1/6;
+        grid-row:1;
+        grid-column:auto;
         position:static;
         text-align:center;
         width:100%;
     }
 
-    nav h2 {
+    /* nav h2 {
         grid-row:1;
     }
 
