--- a/milestone5/style.css
+++ b/milestone5/style.css
@@ -235,10 +235,7 @@ footer {
 
     nav ul {
         grid-row:2;
-    }
-
-    nav ul li {
-        flex-flow:nowrap column;
+        flex-flow:column nowrap;
     }
 
     /*
