--- a/milestone5/style.css
+++ b/milestone5/style.css
@@ -232,9 +232,10 @@ footer {
     nav {
         display:flex;
         flex-flow:column;
+        padding:none;
     }
 
-    nav header {
+    nav h2 {
         text-align:center;
     }
 
