--- a/milestone5/style.css
+++ b/milestone5/style.css
@@ -242,7 +242,7 @@ footer {
     nav ul {
         display:flex;
         flex-flow:column nowrap;
-        text-align:center;
+        align:center;
     }
 
     #coding_journey {
