--- a/milestone6/style.css
+++ b/milestone6/style.css
@@ -230,6 +230,16 @@ footer {
     float:right;
 }
 
+.questions {
+    display:flex;
+    float:left;
+    text-align: left;
+    grid-area:4/2/4/7;
+    color: rgba(237, 255, 165, 1);
+    padding-left:50px;
+    text-decoration:none;
+}
+
 
 @media only screen and (max-width: 992px) {
     #wrapper {
