--- a/milestone6/style.css
+++ b/milestone6/style.css
@@ -217,6 +217,10 @@ footer {
     grid-area:4/2/4/3;
     color: rgba(237, 255, 165, 1);
     padding-left:50px;
+}
+
+.project a {
+    color: rgba(237, 255, 165, 1);
     text-decoration:none;
 }
 
@@ -235,11 +239,14 @@ footer {
     float:left;
     text-align: left;
     grid-area:4/2/4/7;
-    color: rgba(237, 255, 165, 1);
     padding-left:50px;
     text-decoration:none;
 }
 
+.questions a {
+    color: rgba(237, 255, 165, 1);
+    text-decoration:none;
+}
 
 @media only screen and (max-width: 992px) {
     #wrapper {
