--- a/milestone6/style.css
+++ b/milestone6/style.css
@@ -30,40 +30,40 @@
 }
 
 body {
-    background-color: rgba(95,97,96,1);
+    background-color: rgba(95, 97, 96, 1);
     margin: auto;
 }
 
 nav {
-    background-color: rgba(9,1,40,1);
-    top:0;
+    background-color: rgba(9, 1, 40, 1);
+    top: 0;
     grid-row: 1;
     grid-column: 2/8;
-    display:flex;
-    flex-flow:row nowrap;
+    display: flex;
+    flex-flow: row nowrap;
 }
 
 nav a {
-    text-decoration:none;
-    display:block;
-    color:rgba(254, 32, 213, 1);
+    text-decoration: none;
+    display: block;
+    color: rgba(254, 32, 213, 1);
 }
 
 nav h2 {
     font-size: 24px;
     font-family: 'Lexend Exa', sans-serif;
-    font-weight:normal;
+    font-weight: normal;
     margin: 25px 10px 25px 50px;
-    text-decoration:none;
+    text-decoration: none;
 }
 
 nav ul {
-    display:block;
-    list-style-type:none;
+    display: block;
+    list-style-type: none;
     font-family: 'Anonymous Pro', sans-serif;
-    font-size:24px;
-    display:flex;
-    flex-flow:row nowrap;
+    font-size: 24px;
+    display: flex;
+    flex-flow: row nowrap;
 }
 
 nav ul li {
@@ -71,8 +71,8 @@ nav ul li {
 }
 
 main {
-    padding-left:2rem;
-    padding-right:2rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
     grid-row: 4/5;
     grid-column: 2/8;
     background-color: rgba(159, 159, 159, 1);
@@ -87,14 +87,21 @@ main h3 {
     font-size: 32px;
     font-weight: normal;
     grid-column: 2/4;
-    display:flex;
-    float:left;
+    display: flex;
+    float: left;
     padding-left: 50px;
 }
 
+main h4 {
+    color:rgba(225, 227, 32, 1);
+    font-size:20px;
+    font-weight:bold;
+    padding:none;
+}
+
 main img {
-    float:right;
-    padding-left:40px;
+    float: right;
+    padding-left: 40px;
     padding-top: 20px;
 }
 
@@ -102,13 +109,15 @@ form {
     display: grid;
     grid-row: auto;
     grid-column: 3/7;
-    grid-gap: 1rem;
-    width:100%;
+    grid-gap:1.5rem;
+    width: 100%;
+    padding:2rem;
 }
 
-input, textarea {
-    grid-template-columns: 2fr;
-    padding: 5px 20px 2px 20px;
+form input, textarea {
+    display: grid;
+    grid-row: auto;
+    grid-column: 2/3;
 }
 
 footer {
@@ -116,49 +125,49 @@ footer {
     color: rgba(255, 255, 255, 1);
     grid-row: 5/6;
     grid-column: 2/8;
-    text-align:center;
+    text-align: center;
     font-family: 'Anek Odia', sans-serif;
-    padding-top:20px;
-    text-decoration:none;
+    padding-top: 20px;
+    text-decoration: none;
 }
 
 #wrapper {
-    display:grid;
-    grid-template-columns: minmax(0px,1fr) repeat(6, minmax(0,175px)) minmax(0px,1fr);
+    display: grid;
+    grid-template-columns: minmax(0px, 1fr) repeat(6, minmax(0, 175px)) minmax(0px, 1fr);
 }
 
 #homepage {
-    background:none;
-    color:rgba(255, 23, 23, 1);
-    text-decoration:none;
+    background: none;
+    color: rgba(255, 23, 23, 1);
+    text-decoration: none;
 }
 
 #aboutpage {
-    background:none;
-    color:rgba(255, 201, 23, 1);
-    text-decoration:none;
+    background: none;
+    color: rgba(255, 201, 23, 1);
+    text-decoration: none;
 }
 
 #contactpage {
-    background:none;
-    color:rgba(255, 250, 118, 1);
-    text-decoration:none;
+    background: none;
+    color: rgba(255, 250, 118, 1);
+    text-decoration: none;
 }
 
 #blogpage {
-    background:none;
-    color:rgba(110, 210, 47, 1);
-    text-decoration:none;
+    background: none;
+    color: rgba(110, 210, 47, 1);
+    text-decoration: none;
 }
 
 #projectspage {
-    background:none;
-    color:rgba(116, 107, 245, 1);
-    text-decoration:none;
+    background: none;
+    color: rgba(116, 107, 245, 1);
+    text-decoration: none;
 }
 
 #coding_journey {
-    background-color: rgba(19,19,19,1);
+    background-color: rgba(19, 19, 19, 1);
     grid-row: 2/3;
     grid-column: 2/4;
     font-family: 'Roboto Mono', sans-serif;
@@ -177,74 +186,109 @@ footer {
     grid-column: 4/8;
 }
 
+#contactcard {
+    background-image:
+        url("file:///Users/ethanlee/Desktop/Summer%202025%20-%20Computing%20Fundamentals/se1400/milestone6/pexels-pixabay-326576.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    grid-row: 2/3;
+    grid-column: 4/8;
+}
+
 #middle_bar {
-    background-color: rgba(51,64,76,1);
+    background-color: rgba(51, 64, 76, 1);
     grid-row: 3/4;
     grid-column: 2/8;
     font-family: 'Anek Odia', sans-serif;
     font-size: 26px;
-    color: rgba(255,163,98,1);
+    color: rgba(255, 163, 98, 1);
     text-align: center;
     line-height: 100%;
     padding-top: 30px;
 }
 
 #ellipsis {
-    background:none;
-    color:rgba(255, 255, 255, 1);
+    background: none;
+    color: rgba(255, 255, 255, 1);
     font-size: 40px;
-    font-weight:bold;
-    text-decoration:none;
+    font-weight: bold;
+    text-decoration: none;
     font-family: 'Anek Odia', sans-serif;
 }
 
 #email {
-    background:none;
-    color:rgba(254, 32, 213, 1);
+    background: none;
+    color: rgba(254, 32, 213, 1);
     line-height: 90%;
 }
 
-#myUsername {
-    grid-column:
+#mySubmit {
+    display:flexbox;
+    float:center;
+    margin:20px 0px 20px 0px;
+    width:200px;
+    height:50px;
 }
 
-
-
-.project{
-    display:flex;
-    float:left;
+.mainheader {
+    display: flex;
+    float: left;
     text-align: left;
-    grid-area:4/2/4/3;
+    grid-area: 4/2/4/3;
+    padding-left: 50px;
+}
+
+.project {
+    display: flex;
+    float: left;
+    text-align: left;
+    grid-area: 4/2/4/3;
     color: rgba(237, 255, 165, 1);
-    padding-left:50px;
+    padding-left: 50px;
 }
 
 .project a {
     color: rgba(237, 255, 165, 1);
-    text-decoration:none;
+    text-decoration: none;
+    grid-column: 2/4;
+    padding-left: 50px;
 }
 
 .photo {
-    display:grid;
-    float:right;
-    width:300px;
-    grid-area:2/5/4/7;
+    display: grid;
+    float: right;
+    width: 300px;
+    grid-area: 2/5/4/7;
     padding-bottom: 100px;
     padding-top: 100px;
-    float:right;
+    float: right;
 }
 
 .questions {
-    display:flex;
-    float:left;
+    display: flex;
+    float: left;
     text-align: left;
-    grid-area:4/2/4/7;
-    padding-left:50px;
-    text-decoration:none;
+    grid-area: 4/2/4/3;
+    text-decoration: none;
 }
 
 .questions a {
+    text-decoration: none;
+    grid-column: 2/7;
+}
+
+.answers {
+    display: flex;
+    float: left;
+    text-align: left;
+    grid-area: 4/2/4/3;
     color: rgba(237, 255, 165, 1);
+    padding-left: 50px;
+}
+
+.formlabel {
+    color: white;
+    background:none;
     text-decoration:none;
 }
 
@@ -257,29 +301,29 @@ footer {
 
 @media only screen and (max-width: 768px) {
     #wrapper {
-        width:100%;
-        grid-template-columns:auto;
+        width: 100%;
+        grid-template-columns: auto;
     }
 
     body {
-        margin:none;
-        grid-column:auto;
+        margin: none;
+        grid-column: auto;
     }
 
     nav {
-        display:flex;
-        flex-flow:column;
+        display: flex;
+        flex-flow: column;
     }
 
     nav h2 {
-        text-align:center;
-        margin:0;
+        text-align: center;
+        margin: 0;
     }
 
     nav ul {
-        display:flex;
-        flex-flow:column nowrap;
-        text-align:center;
+        display: flex;
+        flex-flow: column nowrap;
+        text-align: center;
     }
 
 }
