--- a/milestone6/style.css
+++ b/milestone6/style.css
@@ -186,6 +186,15 @@ footer {
     grid-column: 4/8;
 }
 
+#intro_to_me {
+    background-image:
+        url("https://raw.githubusercontent.com/Zyobot101/se1400/refs/heads/main/milestone6/pexels-brettjordan-11123244.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    grid-row: 2/3;
+    grid-column: 4/8;
+}
+
 #contactcard {
     background-image:
         url("https://raw.githubusercontent.com/Zyobot101/se1400/refs/heads/main/milestone6/pexels-pixabay-326576.jpg");
@@ -203,6 +212,8 @@ footer {
     grid-row: 2/3;
     grid-column: 4/8;
 }
+
+
 
 #middle_bar {
     background-color: rgba(51, 64, 76, 1);
