--- a/milestone6/style.css
+++ b/milestone6/style.css
@@ -189,8 +189,9 @@ footer {
 #intro_to_me {
     background-image:
         url("https://raw.githubusercontent.com/Zyobot101/se1400/refs/heads/main/milestone6/pexels-brettjordan-11123244.jpg");
-    background-size: cover;
+    background-size:cover;
     background-repeat: no-repeat;
+    height:500px;
     grid-row: 2/3;
     grid-column: 4/8;
 }
@@ -200,6 +201,7 @@ footer {
         url("https://raw.githubusercontent.com/Zyobot101/se1400/refs/heads/main/milestone6/pexels-pixabay-326576.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+    height:400px;
     grid-row: 2/3;
     grid-column: 4/8;
 }
@@ -209,6 +211,7 @@ footer {
         url("https://raw.githubusercontent.com/Zyobot101/se1400/refs/heads/main/milestone6/pexels-divinetechygirl-1181675.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+    height:500px;
     grid-row: 2/3;
     grid-column: 4/8;
 }
