--- a/milestone6/style.css
+++ b/milestone6/style.css
@@ -89,7 +89,7 @@ main h3 {
     grid-column: 2/4;
     display: flex;
     float: left;
-    padding-left: 50px;
+    padding-left: 0px;
 }
 
 main h4 {
@@ -265,26 +265,22 @@ footer {
     display: flex;
     float: left;
     text-align: left;
-    grid-area: 4/2/4/3;
     color: rgba(237, 255, 165, 1);
-    padding-left: 50px;
+    padding-left: 0px;
+    white-space: wrap;
 }
 
 .project a {
     color: rgba(237, 255, 165, 1);
     text-decoration: none;
-    grid-column: 2/4;
+    grid-column: 2/3;
     padding-left: 50px;
 }
 
 .photo {
-    display: grid;
-    float: right;
+    display:grid;
     width: 300px;
-    grid-area: 2/5/4/7;
-    padding-bottom: 100px;
-    padding-top: 100px;
-    float: right;
+    grid-column: 5;
 }
 
 .questions {
